# batchglm

./: .cookietemple.yml  .flake8  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README.txt  RSAgraph.py  config.ini  cookietemple.cfg  data.py  eager.py  fit_ecdf.py  fit_mme.py  fit_optim.py  interactive.py  main.py  make.bat  noxfile.py  pkg_constants.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sparse_fetch_bug_toy.py  sparse_fetch_bug_toy2.py  versioneer.py
.github/: release-drafter.yml
.github/workflows/: build_package.yml  labeler.yml  publish_docs.yml  publish_package.yml  run_cookietemple_lint.yml  run_tests.yml  sync_project.yml  test.yml
R/: fit_reference.R
RSA/: fit_mme.py  fit_optim.py  fit_reference.R
RSA/models/: NegativeBinomial.py
api/models/: __init__.py  glm_nb.py  negative_binomial.py
batchglm/: __init__.py  __main__.py  _version.py  api.py  class_hierarchy.txt  data.py  external.py  log_cfg.py  pkg_constants.py  types.py
batchglm/api/: __init__.py  data.py  typing.py  utils.py
batchglm/examples/: linear_regression.py  real_data.py
batchglm/models/: __init__.py  base.py  external.py
batchglm/unit_test/: __init__.py  run_all_tests.py  test_acc_glm_all.py  (+30 more)
benchmark/: negative_binomial_linear_biased.py
diffexpr/: base.py  setup.py
docs/: Makefile  authors.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  reference.rst  tutorials.rst  usage.rst
examples/: linear_regression.py  negative_binomial_weighted_fit.py  util.py
fit_nb/: fit_ecdf.py  fit_mme.py  fit_optim.py  fit_reference.R  rgen.R
makefiles/: Linux.mk  Windows.mk
models/: __init__.py  base.py  negative_binomial.py  stats.py
sgdglm/: data.py  pkg_constants.py
source/: conf.py  index.rst
test/: LinearRegression.py  negative_binomial.py  negative_binomial_weighted_fit.py  negative_binomial_with_linear_bias.py  rgen.py  simulation.py  test_negative_binomial.py  test_negative_binomial_with_linear_bias.py  util.py
tests/: __init__.py  run_all_tests.py  run_data_utils_test.py  test_acc_glm_all_numpy.py  test_data_types_glm_all.py  test_dmat.py  test_extreme_values_glm_all.py  test_graph_glm_all.py  test_main.py  test_types_dmat.py
tutorials/: Untitled.ipynb  glm_norm.ipynb  nb_glm.ipynb  nb_glm_constraints.ipynb  nb_glm_size_factors.ipynb
unit_test/: test_negative_binomial.py  test_negative_binomial_with_linear_bias.py
utils/: config.py  init.py  random.py  stats.py
(+479 files in other folders)
