[tool.poetry]
name = "batchglm"
version = "0.7.4"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "batchglm. A cookietemple based ."
authors = ["Mario Picciani <mario.picciani@tum.de>"]
license = "BSD"
readme = "README.rst"
homepage = "https://github.com/theislab/batchglm"
repository = "https://github.com/theislab/batchglm"
documentation = "https://batchglm.readthedocs.io"
packages = [
    { include = "batchglm" },
]
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]


[tool.poetry.dependencies]
python = ">=3.8.0, <3.10.0"
click = "^8.0.0"
rich = "^10.3.0"
PyYAML = "^5.4.1"
dask = ">=2021.10.0"
numpy = ">=1.22.2"
patsy = "^0.5.2"
scipy = "^1.7.3"
pandas = "^1.4.0"
anndata = "^0.7.8"
sparse = "0.9.1" # https://github.com/theislab/diffxpy/issues/194
matplotlib = "^3.5.1"
sphinx-autodoc-typehints = "^1.16.0"
seaborn = "^0.11.2"
bandit = "1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
typeguard = "^2.12.0"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^4.0.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.11.1"
flake8 = "^3.8.4"
black = ">=21.12b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.5.8"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.0"
sphinx-click = "^3.0.0"
Pygments = "^2.8.1"
types-pkg-resources = "^0.1.2"
types-requests = "^2.25.2"
types-attrs = "^19.1.0"
sphinx-rtd-dark-mode = "^1.2.3"
Jinja2 = "^3.0.1"
mypy = "^0.910"
matplotlib = "^3.5.1"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"

[tool.poetry.scripts]
batchglm = "batchglm.__main__:main"

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
exclude = "_version.py"

[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120

[tool.coverage.paths]
source = ["batchglm", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["batchglm"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
